force-app/main/default/objects/SBQQ__Quote__c/fields/A_S_of_CIs__c.field-meta.xml
<CustomField>
    <fullName>A_S_of_CIs__c</fullName>
    <defaultValue>5</defaultValue>
    <label>A/S of CIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>