force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Renewal_Model__c.field-meta.xml
<CustomField>
    <fullName>Account_Renewal_Model__c</fullName>
    <formula>TEXT( SBQQ__Account__r.SBQQ__RenewalModel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Renewal Model</label>
    <type>Text</type>
</CustomField>