force-app/main/default/objects/SBQQ__Quote__c/fields/ACV_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>ACV_1st_Year__c</fullName>
    <inlineHelpText>The annual contract value for the first year.</inlineHelpText>
    <label>ACV (1st Year)</label>
    <summarizedField>SBQQ__QuoteLine__c.Quote_Line_ACV__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>