force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <summarizedField>SBQQ__QuoteLine__c.ApprovalLevel__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>