force-app/main/default/objects/SBQQ__Quote__c/fields/CreatedByProfile__c.field-meta.xml
<CustomField>
    <fullName>CreatedByProfile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Profile</label>
    <type>Text</type>
</CustomField>