force-app/main/default/objects/SBQQ__Quote__c/fields/Edit_Lines__c.field-meta.xml
<CustomField>
    <fullName>Edit_Lines__c</fullName>
    <formula>HYPERLINK(&apos;/apex/sbqq__sb?scontrolCaching=1&amp;id=&apos;+ Id ,  IMAGE(&quot;https://i.imgur.com/MIxQsK4.png&quot;, &quot;Edit Lines&quot; , 25, 75) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Lines</label>
    <type>Text</type>
</CustomField>