force-app/main/default/objects/SBQQ__Quote__c/fields/Full_Name_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Sales_Rep__c</fullName>
    <formula>SBQQ__SalesRep__r.FirstName + &quot; &quot; + SBQQ__SalesRep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name Sales Rep</label>
    <type>Text</type>
</CustomField>