force-app/main/default/objects/SBQQ__Quote__c/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <label>Governing Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State of California</fullName>
                <default>true</default>
                <label>State of California</label>
            </value>
            <value>
                <fullName>State of Delaware</fullName>
            </value>
            <value>
                <fullName>State of New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>