force-app/main/default/objects/SBQQ__Quote__c/fields/Liability_Cap__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap__c</fullName>
    <label>Liability Cap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1x Payments</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>1x Payments</label>
            </value>
            <value>
                <fullName>2x Payments</fullName>
                <color>#78C953</color>
                <label>2x Payments</label>
            </value>
            <value>
                <fullName>3x Payments</fullName>
                <color>#E27001</color>
                <label>3x Payments</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <color>#A845DC</color>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>