force-app/main/default/objects/SBQQ__Quote__c/fields/Lost_Revenue_Due_to_Discounting__c.field-meta.xml
<CustomField>
    <fullName>Lost_Revenue_Due_to_Discounting__c</fullName>
    <formula>IF(SBQQ__ListAmount__c &gt; 0 , (SBQQ__ListAmount__c - SBQQ__NetAmount__c)/SBQQ__ListAmount__c
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Revenue Due to Discounting	(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>