force-app/main/default/objects/SBQQ__Quote__c/fields/Lost_Revenue_Due_to_Discounting_Amt__c.field-meta.xml
<CustomField>
    <fullName>Lost_Revenue_Due_to_Discounting_Amt__c</fullName>
    <formula>SBQQ__ListAmount__c - SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Revenue Due to Discounting (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>