force-app/main/default/objects/SBQQ__Quote__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>IF( SBQQ__NetAmount__c &lt;&gt; 0,( SBQQ__NetAmount__c - Total_Cost__c )/ SBQQ__NetAmount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Margin of this quote calculated as a percentage.</inlineHelpText>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>