force-app/main/default/objects/SBQQ__Quote__c/fields/Margin_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_AMT__c</fullName>
    <formula>( SBQQ__NetAmount__c - Total_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (AMT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>