force-app/main/default/objects/SBQQ__Quote__c/fields/Net_Unit_Prices__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Prices__c</fullName>
    <label>Net Unit Prices</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetPrice__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>