force-app/main/default/objects/SBQQ__Quote__c/fields/of_CI_Lines__c.field-meta.xml
<CustomField>
    <fullName>of_CI_Lines__c</fullName>
    <defaultValue>40</defaultValue>
    <label># of CI Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>