force-app/main/default/objects/SBQQ__Quote__c/fields/of_Entries__c.field-meta.xml
<CustomField>
    <fullName>of_Entries__c</fullName>
    <defaultValue>10</defaultValue>
    <label># of Entries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>