force-app/main/default/objects/SBQQ__Quote__c/fields/Print_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Print_Descriptions__c</fullName>
    <formula>ISPICKVAL( Product_Detail__c , &quot;Descriptions&quot;) || ISPICKVAL( Product_Detail__c , &quot;Both&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Descriptions</label>
    <type>Checkbox</type>
</CustomField>