force-app/main/default/objects/SBQQ__Quote__c/fields/Print_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Print_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Discounts</label>
    <type>Checkbox</type>
</CustomField>