force-app/main/default/objects/SBQQ__Quote__c/fields/Print_Line_Item_Prices__c.field-meta.xml
<CustomField>
    <fullName>Print_Line_Item_Prices__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print Line Item Prices</label>
    <type>Checkbox</type>
</CustomField>