force-app/main/default/objects/SBQQ__Quote__c/fields/Print_List_Prices__c.field-meta.xml
<CustomField>
    <fullName>Print_List_Prices__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print List Prices</label>
    <type>Checkbox</type>
</CustomField>