force-app/main/default/objects/SBQQ__Quote__c/fields/Print_Names__c.field-meta.xml
<CustomField>
    <fullName>Print_Names__c</fullName>
    <formula>ISPICKVAL( Product_Detail__c , &quot;Names&quot;) || ISPICKVAL( Product_Detail__c , &quot;Both&quot;) || ISPICKVAL(Product_Detail__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Names</label>
    <type>Checkbox</type>
</CustomField>