force-app/main/default/objects/SBQQ__Quote__c/fields/Print_Signature_Block__c.field-meta.xml
<CustomField>
    <fullName>Print_Signature_Block__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print Signature Block</label>
    <type>Checkbox</type>
</CustomField>