force-app/main/default/objects/SBQQ__Quote__c/fields/Print_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Print_Terms_and_Conditions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>