force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <label>Product Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Names</fullName>
                <default>true</default>
                <label>Names</label>
            </value>
            <value>
                <fullName>Descriptions</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>