force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>