force-app/main/default/objects/SBQQ__Quote__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renewal, 60 Day Notice</fullName>
                <default>true</default>
                <label>Auto Renewal, 60 Day Notice</label>
            </value>
            <value>
                <fullName>Auto Renewal, 30 Day Notice</fullName>
            </value>
            <value>
                <fullName>Option for Renewal, 30 Day Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>