force-app/main/default/objects/SBQQ__Quote__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <formula>MIN( 
5 
+ 
CASE(TEXT(SBQQ__PaymentTerms__c), 
&quot;Due on receipt&quot;, 0, 
&quot;Net 15&quot;, 0, 
&quot;Net 30&quot;, 0, 
&quot;Net 45&quot;, 1, 
&quot;Net 60&quot;, 1, 
&quot;Net 90&quot;, 2,0) * 9 
+ 
CASE(TEXT(Liability_Cap__c), 
&quot;2x Payments&quot;, 1, 
&quot;3x Payments&quot;, 3, 
&quot;Custom&quot;, 4, 0) *9 
+ 
CASE(TEXT(Governing_Law__c), 
&quot;State of Delaware&quot;, 1, 
&quot;State of New York&quot;, 2, 0) * 9 
+ 
CASE(TEXT(Renewal__c), 
&quot;Auto Renewal, 30 Day Notice&quot;, 2, 
&quot;Option for Renewal, 30 Day Notice&quot;, 5, 0) *9 , 95)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>