force-app/main/default/objects/SBQQ__Quote__c/fields/Total_NRR__c.field-meta.xml
<CustomField>
    <fullName>Total_NRR__c</fullName>
    <inlineHelpText>The total Non-Recurring Revenue on this quote.</inlineHelpText>
    <label>Total NRR</label>
    <summarizedField>SBQQ__QuoteLine__c.Total_NRR__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>