force-app/main/default/objects/SBQQ__Quote__c/fields/Total_TCV__c.field-meta.xml
<CustomField>
    <fullName>Total_TCV__c</fullName>
    <inlineHelpText>The Total Contract Value for this quote.</inlineHelpText>
    <label>Total TCV</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>